# IFcoder

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
examples/: append_metadata_to_nuclei.py  download_sample_images.py  ifcoder_example.ipynb  plot_embedding.ipynb  segment_nuclei.cppipe
src/ifcoder/: extract.py  io.py  models.py  train.py
tests/: conftest.py  test_extract.py  test_io.py  test_train.py
tests/data/: Cells.csv  IXMtest_A13_s1_w159359221-1C13-419B-9F19-78E0722F282B.tif  IXMtest_A13_s1_w4805C68C1-1556-4CE9-931D-A20E7DA9BDC8.tif  IXMtest_A13_s2_w1F0C1636C-F997-4AB2-BD8B-79B1AA89B517.tif  IXMtest_A13_s2_w4E0BF6373-87B9-4510-A281-20DB8E3DA77F.tif
