[project]
name = "ifcoder"
version = "0.1.0"
description = "IFcoder: embeddings of immunofluorescence cell images"
readme = "README.md"
authors = [
    { name = "Masashi Fujita", email = "mssfjt@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "tifffile",
  "scikit-image",
  "torch",
  "torchvision",
]

[project.optional-dependencies]
dev = [
  "pytest"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

